# app/Http/Resources/RouterResource.php
@@ -16,13 +16,16 @@ class RouterResource extends JsonResource
 
         return [
             'id' => $this->id,
+            'gateway_type' => $this->gateway_type,
             'name' => $this->name,
-            'type' => $this->type,
-            'vendor' => $this->vendor,
-            'model' => $this->model,
+            'lan_ip' => $this->lan_ip,
+            'api_host' => $this->api_host,
+            'api_port' => $this->api_port,
+            'api_username' => $this->api_username,
+            'api_password_set' => filled($this->api_password),
+            'gateway_id' => $this->gateway_id,
             'serial_number' => $this->serial_number,
-            'mac_address' => $this->mac_address,
-            'ip_address' => $this->ip_address,
+            'wifidog_port' => $this->wifidog_port,
             'status' => $this->status,
             'online' => $online,
             'last_seen_at' => $this->last_seen_at,
